# hf-agents-course

./: pyproject.toml
00_introduction/: dummy_agent.py  serverless_api.py  smolagents_intro.py
00_introduction/bonus_finetuning_function_calling/: 00_exercise.py  01_fine_tunning.py  lora_finetunning.ipynb
02_smolagents/: 01_CodeAgents.py
