[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.3.2",
    "jupyter>=1.1.1",
    "python-dotenv>=1.0.1",
    "smolagents>=1.8.1",
    "torch>=2.6.0",
    "transformers>=4.48.3",
    "trl>=0.15.2",
]
